Bug 458241 - Mouse wheel inconsistency
Summary: Mouse wheel inconsistency
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2022-08-24 09:26 UTC by medin
Modified: 2025-10-17 10:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2022-08-24 09:26:10 UTC
If you enable mouse wheel zoom in Gwenview options page then moving the wheel up will zoom in and moving it down will zoom out which is the natural behavior, but if you hover over zoom combobox at right bottom and use mouse wheel the behavior becomes the total opposite : moving the wheel up will zoom out while moving down will zoom in.
Comment 1 A Linux User 2025-08-25 08:23:21 UTC
Thank you for the bug report. Unfortunately we were not able to get to it yet. Can we ask you to please check if this is still an issue with Gwenview 25.08.0?
Comment 2 medin 2025-08-29 11:50:38 UTC
(In reply to A Linux User from comment #1)
> Thank you for the bug report. Unfortunately we were not able to get to it
> yet. Can we ask you to please check if this is still an issue with Gwenview
> 25.08.0?

Thanks, it's still repro in Gwenview 25.08.0, the list of zoom values should be reversed in that combobox.
Comment 3 A Linux User 2025-09-02 10:38:47 UTC
The issue is the following:
The zoom slider works as expected. But if you hover over the dropdown menu, scrolling navigates in this menu. Now the options are listed in such a way that the behaviour is reversed. Easiest solution: Reverse the order of the options in the dropdown. This would also increase usability.
Comment 4 A Linux User 2025-09-02 10:45:10 UTC
The relevant code lives here I think: https://invent.kde.org/graphics/gwenview/-/tree/master/lib/zoomcombobox
Comment 5 Taras Oleksyn 2025-10-12 10:00:33 UTC
On it: https://invent.kde.org/graphics/gwenview/-/merge_requests/355
Comment 6 Taras Oleksyn 2025-10-17 10:01:08 UTC
Git commit 677925f1c956ccd36a80b0ce7aef32939cc6a7f2 by Taras Oleksyn.
Committed on 17/10/2025 at 09:47.
Pushed by meven into branch 'master'.

Reversed zoom combo box items.

M  +13   -14   lib/zoomcombobox/zoomcombobox.cpp

https://invent.kde.org/graphics/gwenview/-/commit/677925f1c956ccd36a80b0ce7aef32939cc6a7f2