Reversed zoom combo box items.

BUG: 458241